Split the section of "how the program generates" in two (description of the ranges). Started writing the new endpoints.

--- a/doc/ProofOfGeneration.tex
+++ b/doc/ProofOfGeneration.tex
@@ -56,7 +56,8 @@
 \end{abstract}
 
 \maketitle
-
+\setcounter{tocdepth}{1}
+\tableofcontents
 
 
 \section{Introduction}
@@ -134,8 +135,9 @@ K-1\}$. Let $\Sigma_K$ be the symmetric group on the set $\ubar{K}$.
     $\sum_{v \in V} g_v + \abs{E} - (\abs{V} - 1)$, equals $G$.
   \item Its \emph{total number of marked points}, defined as $\sum_{v
       \in V} n_v$, equals $N$.
-  \item Stability condition: $\deg v + n_v \geq 3$ for every vertex
-    $v$ with $g_v = 0$.
+  \item \label{it:condition stability} Stability condition: $\deg v +
+    n_v \geq 3$ for every vertex $v$ with $g_v = 0$ (in other words,
+    $v$ must have at least $3$ \emph{half edges\/}).
   \end{enumerate}
 \end{definition}
 
@@ -167,10 +169,17 @@ Let us introduce the notation we use in the program.
   $a_{i,j}$: the symmetric matrix $a$ is called the \emph{adjacency
     matrix} of the stable graph. For convenience, we will denote $l_i
   = a_{i,i}$: it is the vector whose elements are the loops at the
-  vertex $i$. For simplicity, we will consider $g_i$, $n_i$,
-  $a_{i,j}$, $l_i$ to be defined also for $i$ or $j$ outside
-  $\ubar{K}$, in which case their value is always assumed to be $0$.
+  vertex $i$. For simplicity, we will consider $g_i$, $n_i$, $l_i$,
+  $a_{i,j}$ to be defined also for $i$ or $j$ outside $\ubar{K}$, in
+  which case their value is always assumed to be $0$.
 \end{notation}
+
+\begin{remark}
+  In the following, we assume $\abs{V} > 1$ in order not to deal with
+  special cases. There are trivially $G+1$ stable graphs of type $(G,
+  N)$ with one vertex, depending on the number of self intersection of
+  the single irreducible component.
+\end{remark}
 
 The program uses recursive functions to generate the data that
 constitute a stable graph. In order, it generates the numbers $g_i$,
@@ -184,14 +193,14 @@ as early as possible, to minimize the time spent in branches that do
 not lead to stable graphs.
 
 To take into account the second principle, we will deduce from the
-initial conditions some other necessary conditions that can be checked
-before the graph is defined in its entirety, in particular from
-Condition~\ref{it:condition genus}. For the first principle, we
-generalize the following idea: to generate a vector for every class of
-vectors of length $K$ modulo permutations, the simplest way is to
-generate vectors whose entries are increasing.
+conditions of Definition~\ref{def:stable graph} some other necessary
+conditions that can be checked before the graph is defined in its
+entirety. For the first principle, we generalize the following idea:
+to generate a vector for every class of vectors of length $K$ modulo
+permutations, the simplest way is to generate vectors whose entries
+are increasing.
 
-So, the program fills the data in the order
+Therefore, the program fills the data in the order
 \begin{align*}
   & g_0, \dots, g_{K-1}, \\
   & \qquad \qquad n_0, \dots, n_{K-1}, \\
@@ -200,104 +209,252 @@ So, the program fills the data in the order
     K-1}, a_{1, 2}, \dots, a_{1, K-1}, \dots, a_{K-2, K-1}\text{.}
 \end{align*}
 It fills each of these positions with an integer in a specific range
-that we are going to describe next. For each of these attempts, it
-recursively continues to fill the vectors until everything is fixed
-and the graph is checked to be a stable graph and not isomorphic to a
-graph already generated.
+that we are going to describe in Section~\ref{sec:ranges}. For each of
+these attempts, it recursively continues to fill the data until
+everything is fixed and the graph is checked to be a stable graph and
+not isomorphic to a graph already generated.
+
+% TODO explain better that division is a way to enforce lexicographic
+% order on g,n,l,a (scanned horizontally and vertically)
+The main ingredient to decide the lower endpoint is the concept of
+\emph{division\/} before an index $i$. Basically, having a division
+before $i$ means that within the data we have already decided, we have
+that a value relative to the index $i$ is strictly bigger than a value
+relative to the index $i-1$. Hence, if we have a division before $i$,
+we allow the data relative to the index $i$ to start from $0$;
+otherwise, it can only start from the value assigned to the index
+$i-1$ (i.e., the datum we are deciding must be non decreasing at the
+index $i$).
 
 \begin{notation}
   We will denote the endpoints of the range of values that the program
   tries to assign to $g_i$ as $g_i^{\min}$ and $g_i^{\MAX}$;
   \emph{mutatis mutandis\/} for the other data.
+\end{notation}
 
-  At any time during the algorithm, we let $p_1$ be the number of
-  vertices $i$ to which the algorithm has assigned $g_i = 0$; we let
-  $c$ be the number of couples of vertices already connected by an
-  edge.
+\begin{remark}
+  We choose the ranges for the data $g$, $n$, and $l$, in such a way
+  that for any data $(g, n, l)$ the program generates, there is at
+  least one choice for the matrix $a$ that gives a stable graph.
+
+  % TODO: fix this
+  This is so because the endpoints for the ranges are computed
+  thinking of the worst possible stable graph (that is, the one with
+  the least number of half edges, to stabilize genus $0$ vertices, and
+  the least number of edges, to connect the graph). Hence, at least
+  this worst case is stable and with those data.
+\end{remark}
+
+
+
+\section{Description of the ranges}\label{sec:ranges}
+
+\begin{notation}
+  At any time during the algorithm, we let $e^{\MAX}$ be the maximum
+  number of edges that could be placed after that time, and $c$ be the
+  number of couples of (different) vertices already connected by an
+  edge. We let $p_1$ be the number of vertices $i$ to which the
+  algorithm has assigned $g_i = 0$;
+\end{notation}
+
+\begin{notation}
+  When deciding $g$, $n$, or $l$, we let $\tilde{n}_i$ be the minimum
+  between $2$ and the number of half edges already assigned to the
+  $i$-th vertex. This is justified by the fact that we know that at
+  least one half edge will be assigned to the $i$-th vertex to connect
+  it to the rest of the graph. Hence, whenever $g_i = 0$,
+  $\tilde{n}_i$ represent the number of \emph{stabilizing\/} half
+  edges, in the sense that they are not useless for the aim of
+  stabilizing the curve. We define also
+  \begin{align*}
+    N_i &\coloneqq \sum_{\substack{j < i\\g_j = 0}} n_j\,\text{,} &
+    \tilde{N} &\coloneqq \sum_{g_j = 0} \tilde{n}_j\,\text{,} &
+    \tilde{N}_i &\coloneqq \sum_{\substack{j < i\\g_j = 0}} \tilde{n}_j\,\text{;}\\
+    G_i &\coloneqq \sum_{j < i} g_j\,\text{,} &
+    L_i &\coloneqq \sum_{j < i} l_j\,\text{.}
+  \end{align*}
 \end{notation}
 
 We are now ready to describe the ranges in which the data can vary.
-\begin{enumerate}
-\item Since $g$ is the first vector to be generated, we can do so in a
-  non-decreasing fashion, hence:
-  \[
-  g_i^{\min} = g_{i-1}
-  \]
-  (remember that $g_j = 0$ whenever $j \not\in \ubar{K}$). To compute
-  $g_i^{\MAX}$ we use Condition~\ref{it:condition genus}, observing
-  that:
-  \begin{itemize}
-  \item in order to connect the graph, we will need to create at least
-    $K-1$ edges;
-  \item in order to stabilize the $p_1$ vertices of genus $0$, we will
-    need to create at least $(3p_1 - M)/2$ edges;
-  \item the genera $g_{i+1}, \ldots, g_{K-1}$ will be greater or equal
-    to $g_i$.
-  \end{itemize}
-  Hence, isolating $g_i$ from Condition~\ref{it:condition genus}, we
-  obtain
-  \[
-  g^{\MAX}_i = \left(G - \sum_{j < i} g_j - \max\left\{K-1, \frac{3p_1
-        - M}{2}\right\} + K - 1\right) / (K-i)\text{.}
-  \]
-  When $g_i$ is assigned a value strictly bigger than $g_{i-1}$, we
-  say that there is a \emph{division\/} before $i$.
-\item The vector $n$ cannot be filled in a non-decreasing way because
-  we have already fixed $g$. But whenever $g_i = g_{i-1}$ (i.e., when
-  there is no division before $i$), we can impose the condition $n_i
-  \geq n_{i-1}$. So
-  \[
-  n_i^{\min} =
-  \begin{cases}
-    0 & \text{if there is a division before $i$}\\
-    n_{i-1} & \text{otherwise.}
+
+\subsection{Endpoints for $g_i$}
+
+When the algorithm is deciding the value of $g_i$, we have the
+following situation:
+\begin{itemize}
+\item $e^{\MAX} = G - G_i + K - 1$ by Condition~\ref{it:condition genus};
+\item amongst the $e^{\MAX}$ edges, there are necessarily $K-1$
+  non-loop edges (to connect the graph); these $K-1$ edges give one
+  half edge for each vertex, whereas we can choose arbitrarily where
+  to send the other $K-2$ half edges; conversely, the $2(e^{\MAX} - K
+  +1)$ half edges of the remaining edges can be associated to any
+  vertex; therefore, the maximum number of half edges coming from
+  edges (not counting the one to connect the graph) is $2e^{\MAX} - K
+  = 2(G - G_i) + K - 2$;
+\item the maximum number of half edges coming from marked points is
+  $N$;
+\item we need $2p_1$ half edges to stabilize the genus $0$ vertices,
+  since one half edge comes for free from the connection of the graph.
+\end{itemize}
+
+Since $g$ is the first vector to be generated, we can do so in a
+non-decreasing fashion, hence:
+\[
+g_i^{\min} = g_{i-1}
+\]
+(remember that $g_j = 0$ whenever $j \not\in \ubar{K}$). On the other
+hand $g_i^{\MAX}$ is computed in thanks to the following conditions:
+\begin{itemize}
+\item we need at least $K-1$ non-loop edges, hence (using the fact
+  that $\sum_{j \geq i} g_j \geq (K-i) g_i$)
+  \begin{align*}
+    e^{\MAX} &\geq K-1\\
+    &\Rightarrow G - G_i - (K-i) g_i + K-1 \geq K-1\\
+    &\Rightarrow (K-i)g_i \leq G - G_i\,\text{;}
+  \end{align*}
+\item in order to stabilize the $p_1$ vertices of genus $0$ (using the
+  fact that one stabilizing half edge comes for free by connection) we
+  must have
+  \begin{align*}
+    2 p_1 &\leq 2e^{\MAX} - K + N\\
+    &\Rightarrow 2p_1 \leq G - G_i - (K-i)g_i - K + N\\
+    &\Rightarrow (K-i)g_i \leq G - G_i - K + N - 2p_i\,\text{.}
+  \end{align*}
+\end{itemize}
+
+According to our idea of divisions, we set a division before $i$
+whenever $g_i$ is assigned a value strictly bigger than $g_{i-1}$.
+
+\subsection{Endpoints for $n_i$}
+
+When deciding $n_i$, we have the following situation:
+\begin{itemize}
+\item as before, $e^{\MAX} = G - G_K + K - 1 \geq K-1$, and the
+  maximum number of half edges still to be assigned and coming from edges is
+  $2e^{\MAX} - K = 2(G - G_K) + K - 2$;
+\item the number of half edges still to be assigned and coming from
+  marked points is $N - N_i - n_i$;
+\item we need $2p_1 - \tilde{N}_i - \tilde{n}_i$ half edges to
+  stabilize the first $p_1$ vertices;
+\item if $g_i = 0$, we need $2(i+1) - \tilde{N}_i - \tilde{n}_i$ half
+  edges to stabilize the first $i+1$ vertices, and we cannot use
+  marked points.
+\end{itemize}
+
+The vector $n$ cannot be filled in a non-decreasing way because we
+have already fixed $g$. But whenever $g_i = g_{i-1}$ (i.e., when there
+is no division before $i$), we can impose the condition $n_i \geq
+n_{i-1}$. So
+\[
+n_i^{\min} =
+\begin{cases}
+  0 & \text{if there is a division before $i$}\\
+  n_{i-1} & \text{otherwise.}
+\end{cases}
+\]
+The upper endpoint is obtained in the following way:
+\begin{itemize}
+\item we cannot assign more than $N$ marked points, hence (where we
+  treat the case of $g_i = 0$ in a special way)
+  \begin{align*}
+    N_i + n_i &\leq N\\
+    \Rightarrow n_i &\leq N - N_i\\
+    \Rightarrow (p_1 - i)n_i &\leq N - N_i\text{ if moreover $g_i = 0$.}
+  \end{align*}
+\item if $g_i = 0$, in order to stabilize the $p_1$ vertices of genus
+  $0$, we need
+  \begin{align*}
+    2 p_1 - \tilde{N}_i - \tilde{n_i} &\leq (2(G - G_K) + K - 2) + (N - N_i - n_i)\\
+    \Rightarrow n_i - \min(2, n_i) = n_i - \tilde{n_i} &\leq (2(G - G_K) + K - 2) + (N - n_i) - (2 p_1 + \tilde{N}_i)\\
+    \Rightarrow
+    &\begin{cases}
+      \text{impossible} & \text{if $\mathrm{RHS} < 0$}\\
+      n_i \leq 2+\mathrm{RHS} & \text{otherwise.}
+    \end{cases}
+  \end{align*}
+\end{itemize}
+
+Again, if $n_{i-1} < n_i$ we say that there is a division before
+$i$. Note that, even if it does not influence our definition of
+divisions, we may actually obtain a slightly better estimate for
+$n_i^{\min}$ if $g_i = 0$. Indeed, to stabilize the first $i+1$ curves
+we cannot use marked points anymore, therefore we have:
+\begin{align*}
+  2 (i+1) - \tilde{N}_i - \tilde{n}_i &\leq (2(G - G_K) + K - 2)\\
+  \Rightarrow \tilde{n}_i = \min(2, n_i) &\geq - (2(G - G_K) + K - 2) + (2(i+1) - \tilde{N}_i)\\
+  \Rightarrow
+  &\begin{cases}
+    \text{impossible} & \text{if $\mathrm{RHS} > 2$}\\
+    n_i \geq \mathrm{RHS} & \text{otherwise.}
   \end{cases}
-  \]
-  The upper endpoint is simply the remaining number of marked
-  points:
-  \[
-  n_i^{\MAX} = M - \sum_{j < i} n_j\text{.}
-  \]
-  Again, if $n_{i-1} < n_i$ we say that there is a division before
-  $i$.
-\item The lower endpoint for $l$ is computed in the same way as
-  $n_i^{\min}$:
-  \[
-  l_i^{\min} =
-  \begin{cases}
-    0 & \text{if there is a division before $i$}\\
-    l_{i-1} & \text{otherwise.}
-  \end{cases}
-  \]
-  For the upper endpoint we use again Condition~\ref{it:condition
-    genus}, (note that this time it is less powerful since $l$ is not
-  necessarily non-decreasing): 
-  \[
-  l_i^{\MAX} = G - \sum_{j \in \ubar{K}} g_j - \sum_{j < i} l_j + K -
-  1\text{.}
-  \]
-  If $l_i > l_{i-1}$, we add a division before $i$.
-\item Finally, the lower endpoint for $a_{i,j}$ is
-  \[
-  a_{i,j}^{\min} =
-  \begin{cases}
-    0 & \text{if there are divisions before $i$ and $j$}\\
-    a_{i,j-1} & \text{if there is a division before $i$ but not before
-      $j$}\\
-    a_{i-1,j} & \text{if there is a division before $j$ but not before
-      $i$}\\
-    \max\{a_{i,j-1}, a_{i-1,j}\} & \text{if there are no divisions
-      before $i$ or $j$.}
-  \end{cases}
-  \]
-  The upper endpoint is
-  \[
-  a_{i,j}^{\MAX} = G - \sum_{j \in \ubar{K}} g_i - \sum_{j \in
-    \ubar{K}} l_i - \max\{0, K - 2 + c\} + K - 1\text{.}
-  \]
-  We put a division before $i$ if $a_{i,j} > a_{i-1,j}$ and a division
-  before $j$ if $a_{i,j} > a_{i,j-1}$.
-\end{enumerate}
+\end{align*}
+
+\subsection{Endpoints for $l_i$}
+
+When deciding $l_i$, this is the situation:
+\begin{itemize}
+\item $e^{\MAX} = G - G_K - L_i - l_i + K - 1 \geq K-1$, and the
+  maximum number of half edges coming from edges to assign is
+  $2e^{\MAX} - K = 2(G - G_K - L_i - l_i) + K - 2$; however, if we
+  restrict to the first $i+1$ vertices, we cannot assign loops
+  anymore, hence the maximum number decrease to $e^{\MAX} - 1 = G -
+  G_K - L_i - l_i + K - 2$;
+\end{itemize}
+
+The lower endpoint for $l$ is computed in the same way as
+$n_i^{\min}$:
+\[
+l_i^{\min} =
+\begin{cases}
+  0 & \text{if there is a division before $i$}\\
+  l_{i-1} & \text{otherwise.}
+\end{cases}
+\]
+For the upper endpoint we use the following conditions:
+\begin{itemize}
+\item we need at least $K-1$ non-loop edges, hence
+  \begin{align*}
+    e^{\MAX} &\geq K-1\\
+    &\Rightarrow G - G_K - L_i - l_i + K-1 \geq K-1\\
+    &\Rightarrow l_i \leq G - G_K - L_i\,\text{;}
+  \end{align*}
+\item let $z$ be the index of the genus $0$ vertex with the least
+  number of stabilizing half edges such that $z < i$; then to
+  stabilize it, we can't use loops anymore, hence we must have
+  \begin{align*}
+    &\begin{aligned}
+      &2 && \text{half edges needed to stabilize}\\
+      & \qquad \leq G - G_K - L_i - l_i + K - 1 &&\text{half edges coming from edges}\\
+      & \qquad\quad + n_z + 2l_z && \text{stabilizing half edges coming from marked points}
+    \end{aligned}\\
+    &\qquad \Rightarrow l_i \leq G - G_k - L_i + K - 3 + n_z + 2l_z
+  \end{align*}
+\end{itemize}
+If $l_i > l_{i-1}$, we add a division before $i$.
+
+\subsection{Endpoints for $a_{i,j}$}
+
+The lower endpoint for $a_{i,j}$ is
+\[
+a_{i,j}^{\min} =
+\begin{cases}
+  0 & \text{if there are divisions before $i$ and $j$}\\
+  a_{i,j-1} & \text{if there is a division before $i$ but not before
+    $j$}\\
+  a_{i-1,j} & \text{if there is a division before $j$ but not before
+    $i$}\\
+  \max\{a_{i,j-1}, a_{i-1,j}\} & \text{if there are no divisions
+    before $i$ or $j$.}
+\end{cases}
+\]
+The upper endpoint is
+\[
+a_{i,j}^{\MAX} = G - G_K - L_K - \max\{0, K - 2 + c\} + K - 1\,\text{.}
+\]
+We put a division before $i$ if $a_{i,j} > a_{i-1,j}$ and a division
+before $j$ if $a_{i,j} > a_{i,j-1}$.
+
+\subsection{Final testings}
 
 At the end of the $i$-th row of the matrix, we test that the $i$-th
 vertex is connected to at least another vertex. If $g_i$ equals zero
@@ -319,25 +476,27 @@ We want to prove the following result.
   one graph for every isomorphism class of graphs.
 \end{proposition}
 
-From now on we fix a number $K$ of vertices, and we focus on proving
+From now on, we fix the number of vertices $K$, and focus on proving
 that the algorithm generates at least one graph for every isomorphism
 class of graphs with $K$ vertices. The conditions of stability and of connectedness of the graph generated by the algorithm are checked separatedly so they are not really relevant in this section.
 
   . %They were relevant in the previous section, as our recursive way of generating graphs incorporates the check at every stage of the recursion, in order to minimize
-  
-  \begin{notation} We denote by
+
+\begin{notation}
+  We have seen previously that we can encode the data of a stable
+  graph in a quadruple $G \coloneqq (g, n, l, a)$. We denote by
   $\mathcal{M}$ the set of all quadruples generated by the algorithm
   described in the previous section, and by $\mathcal{A}$ the set of
-  all quadruples of stable, connected graphs.
+  all quadruples encoding a stable graph.
 \end{notation}
- 
- 
-Since the program check that each generated graph is stable and connected, we have
-the inclusion $\mathcal{M} \subset \mathcal{A}$. Proving
-Proposition~\ref{prop:main} is equivalent to proving that every $G \in
+
+Since the program check that each generated graph is stable, we have
+the inclusion $\mathcal{M} \subset \mathcal{A}$; hence, to prove
+Proposition~\ref{prop:main} is equivalent to prove that every $G \in
 \mathcal{A}$ is in $\mathcal{M}$ up to applying a permutation of
-$\ubar{K}$. This is accomplished by giving two characterizations
-of the property of being an element of $\mathcal{M}$: Lemma~\ref{lemma:char1} and~\ref{lemma:char2}.
+$\ubar{K}$. The key point is to give two characterizations
+(Lemma~\ref{lemma:char1} and~\ref{lemma:char2}) of the property of
+being an element of $\mathcal{M}$.
 
 \begin{lemma}\label{lemma:char1}
   Let $G = (g, n, l, a) \in \mathcal{A}$; then $G \in \mathcal{M}$ if
@@ -347,12 +506,12 @@ of the property of being an element of $\mathcal{M}$: Lemma~\ref{lemma:char1} an
     j \not\in \{i-1, i\},\\
     \begin{aligned}
       g_{i-1} &> g_i &&\text{does not happen,}\\
-      n_{i-1} &> n_i &\Rightarrow\  & g_{i-1} < g_i\text{,}\\
-      l_{i-1} &> l_i &\Rightarrow\  & g_{i-1} < g_i \vee n_{i-1} < n_i\text{, and}\\
+      n_{i-1} &> n_i &\Rightarrow\  & g_{i-1} < g_i\,\text{,}\\
+      l_{i-1} &> l_i &\Rightarrow\  & g_{i-1} < g_i \vee n_{i-1} < n_i\,\text{, and}\\
       a_{i-1,j} &> a_{i,j} &\Rightarrow\ & g_{i-1} < g_i \vee n_{i-1}
       < n_i \vee l_{i-1} < l_i \vee\\
       &&&\ \exists j^\prime < j: j^\prime \not\in \{i-1,i\} \wedge
-      a_{i-1,j^\prime} < a_{i,j^\prime}\text{.}
+      a_{i-1,j^\prime} < a_{i,j^\prime}\,\text{.}
     \end{aligned}
   \end{multline*}
 \end{lemma}
@@ -465,6 +624,7 @@ of the property of being an element of $\mathcal{M}$: Lemma~\ref{lemma:char1} an
   it does not satisfy the four conditions of
   Lemma~\ref{lemma:char1}. 
 \end{definition}
+
 In particular, in view of the last definition, Lemma \ref{lemma:char1} translates into the following statement: \emph{A stable graph $G \in \mathcal{A}$ has a breaking position
   if and only if $G$ is not an element of $\mathcal{M}$}.
 
@@ -486,7 +646,7 @@ upper triangular part of $a$. For example, if
 then
 \[
 v(G) = (0, 0, 2, 0,\quad 1, 1, 0, 1,\quad 0, 0, 0, 0,\quad 1, 1,
-1,\quad 2, 1,\quad 0)\text{.}
+1,\quad 2, 1,\quad 0)\,\text{.}
 \]
 
 \begin{definition} \label{def:order} If $G, H \in \mathcal{A}$, we
